fixing size on mobile

--- a/_sass/_custom.scss
+++ b/_sass/_custom.scss
@@ -132,6 +132,7 @@
    overflow-y: scroll !important;
    @media only screen and (max-width: 480px), only screen and (max-device-width: 480px) {
      padding: 10px 15px 15px 0px;
+     width: 90%;
      height: 60%;
    }
  }
